--- a/src/components/GoRight.css
+++ b/src/components/GoRight.css
@@ -21,10 +21,11 @@
   background-color: rgba(255, 255, 255, 0.05);
 }
 
-@media (min-width: 280px) and (max-width: 899px) {
+@media (min-width: 100px) and (max-width: 899px) {
   .Right__Button {
     right: 20%;
-    bottom: 5%;
+    bottom: 2%;
+    margin-left: 0;
   }
 }
 
@@ -32,6 +33,7 @@
   .Right__Button {
     right: 20%;
     bottom: 5%;
+    margin-left: 0;
   }
 }
 
