--- a/src/mainpages/About.css
+++ b/src/mainpages/About.css
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow-y: scroll;
+  overflow: hidden;
 }
 .OwnerPhoto__Name__Logos {
   display: flex;
@@ -30,10 +32,10 @@
   display: flex;
   flex-wrap: wrap;
   width: 280px;
-  height: 120px;
 }
 .Logos > img {
   margin-right: 10px;
+  margin-bottom: 10px;
 }
 .AboutOwner > h2 {
   font-size: 30px;
@@ -46,13 +48,12 @@
   color: #222222;
 }
 
-@media (min-height: 500px) and (max-height: 700px) {
+@media (min-width: 100px) and (max-width: 600px) {
   .AboutPage {
-    height: 900px;
+    overflow-y: scroll;
+    overflow: visible;
+    height: auto;
   }
-}
-
-@media (min-width: 280px) and (max-width: 695px) {
   .OwnerPhoto__Name {
     display: flex;
     flex-direction: column;
@@ -67,18 +68,30 @@
   .AboutOwner > p {
     font-size: 20px;
   }
+  .Logos {
+    width: 100%;
+  }
+  .OwnerPhoto__Name__Logos {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .AboutOwner {
+    overflow-y: scroll;
+  }
 }
 
-@media (min-width: 280px) and (max-width: 899px) {
+@media (min-width: 601px) and (max-width: 899px) {
   .AboutPage {
-    height: 100%;
-    justify-content: space-around;
+    height: auto;
+    justify-content: flex-start;
   }
   .OwnerPhoto__Name__Logos {
     flex-direction: column;
     align-items: flex-start;
   }
   .Logos {
+    margin-top: 50px;
+    margin-bottom: 50px;
     display: flex;
     width: 100%;
   }
@@ -92,5 +105,6 @@
   .Logos {
     display: flex;
     width: 100%;
+    margin-top: 50px;
   }
 }
