--- a/src/mainpages/Contact.css
+++ b/src/mainpages/Contact.css
@@ -7,7 +7,7 @@
 }
 .Inputs__Container {
   margin-bottom: 30px;
-  width: 615px;
+  width: 100%;
 }
 .Name__Email__Inputs {
   margin-bottom: 20px;
@@ -18,7 +18,7 @@
 .Name__Email__Inputs > input {
   border: none;
   border-radius: 8px;
-  width: 300px;
+  width: 49%;
   height: 50px;
   background-color: #f2f2f2;
   padding-left: 10px;
@@ -46,6 +46,7 @@
   font-family: "Pacifico", cursive;
   font-family: "Roboto Condensed", sans-serif;
   font-size: 18px;
+  resize: none;
 }
 .TextArea::placeholder {
   font-size: 18px;
