--- a/src/components/GoRight.css
+++ b/src/components/GoRight.css
@@ -9,7 +9,6 @@
     rgba(255, 255, 255, 0.5) 0%,
     rgba(255, 255, 255, 0.05) 100%
   );
-  z-index: 9999;
   border: 1px solid rgba(255, 255, 255, 0.2);
   box-sizing: border-box;
   margin-left: 50px;
@@ -39,7 +38,7 @@
 
 @media (min-width: 1351px) and (max-width: 1610px) {
   .Right__Button {
-    right: 20%;
-    bottom: 5%;
+    right: 3%;
+    top: 50%;
   }
 }
