--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  cursor: url(coursor.png);
 }
 body {
   font-family: "Pacifico", cursive;
@@ -11,8 +10,25 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+::-webkit-scrollbar {
+  width: 10px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  width: 10px;
+  background-color: rgba(255, 255, 255, 0.4);
+  border-radius: 10px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+@media (min-width: 100px) and (max-width: 1000px) {
+  ::-webkit-scrollbar {
+    width: 0;
+  }
+  ::-webkit-scrollbar-thumb {
+    width: 0;
+  }
 }
