--- a/src/mainpages/Contact.css
+++ b/src/mainpages/Contact.css
@@ -5,104 +5,32 @@
   font-weight: 400;
   margin-bottom: 50px;
 }
-.Inputs__Container {
-  margin-bottom: 30px;
-  width: 100%;
-}
-.Name__Email__Inputs {
-  margin-bottom: 20px;
+.socialIcons {
   display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
-.Name__Email__Inputs > input {
-  border: none;
-  border-radius: 8px;
-  width: 49%;
-  height: 50px;
-  background-color: #f2f2f2;
-  padding-left: 10px;
-  outline: none;
-  color: #222222;
-  font-family: "Pacifico", cursive;
-  font-family: "Roboto Condensed", sans-serif;
-  font-size: 18px;
-}
-.Name__Email__Inputs > input::placeholder {
-  font-size: 18px;
-  font-family: "Pacifico", cursive;
-  font-family: "Roboto Condensed", sans-serif;
-}
-.TextArea {
-  width: 100%;
-  height: 180px;
-  border: none;
-  border-radius: 8px;
-  background-color: #f2f2f2;
-  padding-left: 10px;
-  outline: none;
-  padding: 10px;
-  color: #222222;
-  font-family: "Pacifico", cursive;
-  font-family: "Roboto Condensed", sans-serif;
-  font-size: 18px;
-  resize: none;
-}
-.TextArea::placeholder {
-  font-size: 18px;
-  font-family: "Pacifico", cursive;
-  font-family: "Roboto Condensed", sans-serif;
-}
-.SocialIcons__SendButton__Container {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.Social__Icons > a {
-  margin-right: 20px;
-}
-.Social__Icons > a:hover {
-  opacity: 0.7;
-}
-.Send__Button {
-  width: 100px;
-  height: 50px;
-  border-radius: 8px;
-  background-color: #27ae60;
-  color: #f2f2f2;
-  font-size: 24px;
-  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
-  transition: 1s;
 }
-.Send__Button:hover {
-  background-color: #208b4e;
+.socialIcons > a {
+  transition: 0.2s;
+  cursor: pointer;
+}
+.socialIcons > a:hover {
+  transform: translateY(-15px);
+}
+.socialIcons > a > img {
+  margin: 10px;
 }
 
 @media (min-width: 100px) and (max-width: 730px) {
-  .Inputs__Container {
-    width: 100%;
+  .socialIcons > a {
+    margin-right: 0;
   }
-  .Name__Email__Inputs {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 0;
-    width: 100%;
+  .socialIcons {
+    justify-content: center;
   }
-  .Name__Email__Inputs > input {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-  .SocialIcons__SendButton__Container {
-    flex-direction: column;
-  }
-  .Send__Button {
-    margin-top: 20px;
-  }
-  .Social__Icons > a > img {
-    margin-bottom: 20px;
+  .socialIcons > a > img {
+    width: 100px;
+    margin: 10px;
   }
 }
