--- a/src/mainpages/Projects.css
+++ b/src/mainpages/Projects.css
@@ -10,7 +10,8 @@
   height: 140px;
   margin: 15px;
   border-radius: 16px;
-  transition: 0.5s;
+  transition: 0.2s;
+  cursor: pointer;
 }
 .Box:hover {
   transform: scale(1.1);
@@ -25,11 +26,155 @@ a {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+}
+.modalBackground {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(72.44deg, #9b23ea 0%, #f68084 30%);
+  background-size: 500% 500%;
+  animation: gradient 20s infinite;
+  animation-fill-mode: forwards;
+}
+.modalCloseIcon {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+.modalCloseIcon:hover {
+  transform: rotate(-360deg);
+}
+.modalBox {
+  position: relative;
+  width: 90%;
+  height: 90vh;
+  border-radius: 25pt;
+  box-shadow: 0 4px 25px 5px rgba(106, 45, 128, 0.1);
+  border: solid 1px rgba(255, 255, 255, 0.2);
+  background: linear-gradient(
+    116.34deg,
+    rgba(255, 255, 255, 0.5) 0%,
+    rgba(255, 255, 255, 0.05) 100%
+  );
+  overflow: hidden;
+}
+.modalTitle {
+  font-size: 40px;
+  color: #333333;
+  padding: 20px 0 0 50px;
+}
+.modalImageContainer {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  width: 100%;
+  height: 80vh;
+  overflow-y: scroll;
+  padding: 50px 50px 100px 50px;
+}
+.modalPhoneImage {
+  width: 180px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  border-radius: 18px;
+  transition: 0.5s;
+  cursor: zoom-in;
+}
+.modalDesktopImage {
+  width: 400px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  border-radius: 14px;
+  transition: 0.5s;
+  cursor: zoom-in;
+}
+.modalDesktopImage:hover,
+.modalPhoneImage:hover {
+  transform: scale(1.1);
+}
+
+.links {
+  display: flex;
+}
+.links > a > img {
+  margin-right: 10px;
+  transition: 0.5s;
+}
+.links > a > img:hover {
+  transform: translateY(-10px);
+}
+.titleAndLinks {
+  display: flex;
+  width: 90%;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 20px;
+}
+@keyframes gradient {
+  0% {
+    background-position: 0% 20%;
+  }
+  50% {
+    background-position: 50% 70%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 @media (min-width: 280px) and (max-width: 699px) {
-  .Projects {
-    height: 600px;
+  .titleAndLinks {
+    display: flex;
+    width: 90%;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding-top: 20px;
+    padding-left: 20px;
+  }
+  .modalTitle {
+    font-size: 30px;
+    padding: 0 0 10px 0;
+  }
+  .googlePlayLink {
+    width: 120px;
+  }
+  .figmaLink {
+    width: 80px;
+  }
+  .modalImageContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
+    height: 80vh;
     overflow-y: scroll;
+    padding: 10px;
+  }
+  .modalPhoneImage {
+    width: 120px;
+    margin: 10px;
+    border-radius: 12px;
+  }
+  .modalDesktopImage {
+    width: 200px;
+    margin: 10px;
+    border-radius: 6px;
+  }
+}
+@media (min-width: 900) and (max-width: 1350px) {
+  .modalImageContainer {
+    padding-bottom: 200px;
   }
 }
