--- a/src/mainpages/Projects.css
+++ b/src/mainpages/Projects.css
@@ -16,12 +16,6 @@
 .Box:hover {
   transform: scale(1.1);
 }
-a {
-  text-decoration: none;
-  font-size: 26px;
-  color: #f2f2f2;
-  text-align: center;
-}
 .Projects {
   display: flex;
   flex-wrap: wrap;
@@ -86,7 +80,7 @@ a {
   width: 180px;
   margin-right: 30px;
   margin-bottom: 30px;
-  border-radius: 18px;
+  border-radius: 10px;
   transition: 0.5s;
   cursor: zoom-in;
 }
@@ -133,6 +127,9 @@ a {
 }
 
 @media (min-width: 280px) and (max-width: 699px) {
+  .modalBox {
+    padding-bottom: auto;
+  }
   .titleAndLinks {
     display: flex;
     width: 90%;
@@ -161,6 +158,7 @@ a {
     height: 80vh;
     overflow-y: scroll;
     padding: 10px;
+    padding-bottom: 100px;
   }
   .modalPhoneImage {
     width: 120px;
